added RandomX and Tiny outputmode
